--- a/salespage/cs/style.css
+++ b/salespage/cs/style.css
@@ -543,7 +543,7 @@ a {
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    border: 2px solid;
+    /* border: 2px solid; */
 }
 
 #bcg-35 p:first-child {
@@ -568,7 +568,7 @@ a {
     text-align: center;
     border: 1px solid #ddd;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-    width: 300px;
+    /* width: 300px; */
 }
 
 .offer h2 {
@@ -635,6 +635,50 @@ a {
     font-weight: bold;
 }
 
+#hq {
+    background-color: black;
+    color: white;
+    margin-top: 2rem;
+}
+
+#hq #wg img {
+    width: 100%;
+  max-width: 400px;
+  height: auto;
+}
+
+#bid h1, p{
+    text-align: center;
+}
+
+
+footer {
+    background-color: white;
+    color: black;
+    padding: 20px;
+    text-align: center;
+    font-size: 10px;
+    margin-top: 50px;
+}
+
+
+footer p {
+    margin: 10px 0;
+}
+
+footer a {
+    color: #ff6b6b;
+    text-decoration: none;
+}
+
+footer a:hover {
+    text-decoration: underline;
+}
+
+
+
+
+
 
 
 
@@ -700,6 +744,9 @@ a {
         font-weight: 100;
     }
 
-   
+    footer {
+        font-size: 6px;
+       
+    }
 
 }
