--- a/cs/style.css
+++ b/cs/style.css
@@ -1,13 +1,30 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap');
+
 body {
   margin: 0;
-  background-color: #f4f4f4;
-  font-family: Arial, sans-serif;
+  padding: 0;
+  background-color: white;
   display: flex;
   justify-content: center;
   align-items: flex-start;
   min-height: 100vh;
-  padding: 20px;
+  padding:0 20px;
   background-origin: red;
+
+  font-family: 'Roboto', sans-serif;
+  font-size: 16px; /* Standard font size */
+  line-height: 1.6; /* Line height for better readability */
+  color: #333; /* Standard font color */
+}
+
+h1, h2, h3, h4, h5, h6 {
+    font-weight: 700; /* Bold font weight for headings */
+    color: #000; /* Black color for headings */
+}
+
+p, a, button {
+    font-weight: 400; /* Regular font weight for paragraphs, links, and buttons */
+    font-size: 16px; /* Standard font size */
 }
 
 #section {
@@ -19,11 +36,6 @@ body {
   text-align: left;
 }
 
-h1 {
-  margin-top: 0;
-  text-align: left;
-}
-
 hr {
   border: 0;
   border-top: 1px solid #ccc;
@@ -31,23 +43,18 @@ hr {
 }
 
 #section img{
+
   width: 100%;
   max-width: 400px;
   height: auto;
-  margin: 2rem 0 0 2rem;
-
 }
 
 #cn img {
-  display: block;
-  margin-left: auto;
-  margin-right: auto;
-  width: 100%;
-  
-}
 
-#cn p {
-  margin: 0 0 20px 0;
+  width: 100%;
+  max-width: 400px;
+  height: auto;
+  
 }
 
 #si {
@@ -59,7 +66,7 @@ hr {
 
 #si a {
   color: inherit;
-  margin-right: 10px;
+  margin-right: 8px;
   font-size: 2rem;
 }
 
@@ -68,7 +75,7 @@ hr {
 #si .fa-linkedin { color: #0077b5; }
 
 
-.bf {
+.bk {
   margin: 2rem 0 0 2rem;
   display: flex;
   justify-content: center;
@@ -81,10 +88,7 @@ hr {
   flex-direction: row;
   background-color: #fff;
    border: none;
-  /* overflow: hidden; */
-  /* height: 400px;
-  width: 700px;
-  margin: 20px; */
+  
 }
 
 
@@ -97,10 +101,10 @@ hr {
 }
 
 .cl img {
-  border-radius: 50%;
-  width: 50px; 
-  height: 20px; 
-  object-fit: cover;
+  
+  width: 100%;
+  max-width: 400px;
+  height: auto;
 }
 
 .cdr {
@@ -151,10 +155,14 @@ hr {
 }
 
 #bf #cd img {
-  display: block;
+  /* display: block;
   margin-left: auto;
   margin-right: auto;
   width: 100px;
+  height: auto; */
+
+  width: 100%;
+  max-width: 400px;
   height: auto;
 }
 
@@ -201,12 +209,11 @@ hr {
   font-weight: bold;
 }
 
-#cd img {
-  width: 100px;
-  height: 100px;
-  border-radius: 50%;
-  object-fit: cover;
-  margin: 20px 0;
+#bf #cd img {
+
+  width: 100%;
+  max-width: 400px;
+  height: auto;
 }
 
 #cd p {
@@ -269,12 +276,16 @@ hr {
 
 #footer p {
   margin: 5px 0;
+  font-size: 5px;
+
 }
 
-#footer a {
+#footer p a {
   color: inherit;
   text-decoration: none;
   margin: 0 5px;
+  font-size: 5px;
+
 }
 
 
@@ -296,8 +307,30 @@ hr {
     padding: 20px 40px;
     text-align: left;
   }
-  
+
+  body {
+    font-size: 14px; 
 }
+
+h1 {
+    font-size: 1.3em;
+}
+
+h2 {
+    font-size: 1.6em;
+}
+
+h3 {
+    font-size: 1.4em;
+}
+
+}
+
+
+
+  
+
+
 
 
 
