--- a/upsell/cs/style.css
+++ b/upsell/cs/style.css
@@ -1,9 +1,29 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap');
+
 body {
     margin: 0;
     padding: 0;
     font-family: Arial, sans-serif;
     background-color: #f4f4f4;
   }
+
+h1, h2, h3, h4, h5, h6 {
+    font-weight: 700; 
+}
+
+p, a, button {
+    font-weight: 400; 
+    font-size: 16px; 
+}
+
+button {
+    font-size: 16px;
+    padding: 10px 20px;
+    border-radius: 5px;
+    border: none;
+    cursor: pointer;
+    transition: background-color 0.3s ease;
+}
 
   #app {
     padding: 0 15px;
@@ -13,7 +33,6 @@ body {
     background-color: #000;
     color: #fff;
     text-align: center;
-    /* padding: 50px 0; */
     width: 100%;
   }
 
@@ -23,24 +42,12 @@ body {
   }
 
   .section-1 img {
-    /* max-width: 50%;
-    height: auto;
-    margin-top: 20px; */
     width: 100%;
   max-width: 400px;
   height: auto;
   }
 
   .section-2 img {
-  /* display: block;
-  margin-left: auto;
-  margin-right: auto;
-  width:50%; */
-
-  /* width: 100%;
-  max-width: 400px;
-  height: auto; */
-
   max-width: 250px;
       height: auto;
       display: block;
@@ -87,7 +94,6 @@ body {
     font-weight: bolder;
     text-align: center;
     margin-bottom: 0;
-    /* background: blue; */
     width: 100%;
   }
 
@@ -131,10 +137,6 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
-    /* height: 100vh;
-    margin: 0;
-    background-color: #f4f4f4;
-    font-family: Arial, sans-serif; */
   }
 
   .timer {
@@ -143,7 +145,6 @@ body {
     align-items: center;
     width: 300px;
     height: 300px;
-    /* border: 10px solid blue; */
     border-radius: 50%;
     color: blue;
     font-size: 2rem;
@@ -176,16 +177,63 @@ body {
 
 
 
-  @media (min-width: 768px) {
+  @media (min-width: 320px) {
     .section-1 h1 {
       font-size: 3.5rem;
     }
     
     
     #btn button {
-            width: 100%; /* Full width for mobile */
-            padding: 10px; /* Adjusted padding for mobile */
+            width: 100%;
+            padding: 10px; 
       }
+
+      body {
+        font-size: 14px; 
+    }
+
+    h1 {
+        font-size: 1.2em;
+    }
+
+    h2 {
+        font-size: 1.2em;
+    }
+
+    h3 {
+        font-size: 1.4em;
+    }
       
       
   }
+
+
+
+
+
+  @media (min-width: 1270px) {
+    
+      body {
+        font-size: 18px; 
+    }
+
+    h1 {
+        font-size: 1.5em;
+    }
+
+    h2 {
+        font-size: 1.8em;
+    }
+
+    h3 {
+        font-size: 1.4em;
+    }
+      
+      
+  }
+
+
+  
+
+
+  
