--- a/salespage/cs/style.css
+++ b/salespage/cs/style.css
@@ -1,7 +1,16 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap');
+
+
 body {
-    margin: 0;
-    padding: 0;
-    font-family: Arial, sans-serif;
+    font-family: 'Roboto', sans-serif;
+    font-size: 16px; /* Standard font size */
+    line-height: 1.6; /* Line height for better readability */
+    color: #333; /* Standard font color */
+}
+
+h1, h2, h3, h4, h5, h6 {
+    font-weight: 700; /* Bold font weight for headings */
+    /* color: #000; */
 }
 
 a {
@@ -29,11 +38,23 @@ a {
     font-weight: 700;
 }
 
-#ad p:nth-child(2) {
-    font-size: 1.5rem;
-    font-weight: 900;
+#ae #e p:first-of-type{
+    color: red;
+    text-align: center;
+    font-size: 20px;
+    font-weight: bolder;
 }
 
+/* #ad p:nth-child(2) {
+    font-size: 1.5rem;
+    font-weight: 900;
+} */
+
+
+/* #e p{
+    font-size: 12px;
+    font-weight: 400;
+} */
 
 
 #rg {
@@ -52,12 +73,7 @@ a {
 
 
 
-#ae #e p:first-of-type{
-    color: red;
-    text-align: center;
-    font-size: 2rem;
-    font-weight: bolder;
-}
+
 
 #ae div img {
     display: block;
@@ -113,19 +129,39 @@ a {
 
 #h h1 {
     margin: 0;
-    font-size: 1.5em;
+    /* font-size: 1.5em; */
 }
 
 #h p {
     font-style: italic;
-    font-size: 1em;
+    /* font-size: 1em; */
     color: #ccc;
 }
 
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 #tms {
     display: flex;
-    flex-wrap: wrap;
-    justify-content: space-around;
+    /* flex-wrap: wrap; */
+    flex-direction: row;
+    
     justify-content: center;
     align-items: center;
     padding: 20px;
@@ -141,6 +177,7 @@ a {
     text-align: center;
 }
 
+
 #tl img {
     border-radius: 50%;
     width: 100px;
@@ -155,12 +192,10 @@ a {
 }
 
 #tl p {
-    font-size: 0.9em;
     color: #666;
 }
 
 .quote {
-    font-size: 1em;
     color: #555;
     margin: 10px 0;
     position: relative;
@@ -171,7 +206,6 @@ a {
 
 .quote::before {
     content: '“';
-    font-size: 3em;
     color: #00796b;
     position: absolute;
     top: -10px;
@@ -180,7 +214,6 @@ a {
 
 .quote::after {
     content: '”';
-    font-size: 3em;
     color: #00796b;
     position: absolute;
     bottom: -10px;
@@ -192,16 +225,25 @@ a {
     color: #00796b;
 }
 
+
+
+
+
+
+
+
+
+
+
 #dra {
     display: block;
   margin-left: auto;
   margin-right: auto;
-  width: 70%;
+  width: 100%;
   margin-bottom: 2rem;
 }
 
 #dra p:first-of-type {
-    font-size: 25px;
     text-align: center;
     font-weight: 900;
 }
@@ -221,14 +263,14 @@ a {
   display: block;
   margin-left: auto;
   margin-right: auto;
-  width: 70%;
+  width: 100%;
   margin-bottom: 2rem; 
 }
 
 #rd p:first-of-type {
     text-align: center;
     color: red;
-    font-size: 2rem;
+    /* font-size: 2rem; */
 }
 
 #rd p {
@@ -240,14 +282,13 @@ a {
    display: block;
   margin-left: auto;
   margin-right: auto;
-  width: 50%;
+  width: 70%;
   margin-bottom: 2rem;
 }
 
 #rd1 p:first-of-type{
     text-align: center;
     color: red;
-    font-size: 2rem;
 }
 
 #rd1 img { 
@@ -260,7 +301,6 @@ a {
     text-align: center;
     margin-top: 2rem;
     text-align: justify;
-    font-size: 1.5rem;
 }
 
 #bcg {
@@ -279,9 +319,8 @@ a {
 #bcg p:first-of-type {
     color: red;
     text-align: center;
-    font-size: 1.8rem;
     font-weight: 900;
-    letter-spacing: 3;
+    /* letter-spacing: 3; */
 }
 
 
@@ -294,14 +333,13 @@ a {
 #bcg h1, h2 {
     color: white;
     text-align: center;
-    letter-spacing: 3;
+    /* letter-spacing: 3; */
 
 }
 
 #bcg p {
     color: white;
     text-align: center;
-    font-size: 1.3rem;
 }
 
 
@@ -360,11 +398,10 @@ a {
     margin-bottom: 2rem; 
     text-align: center;
     background-color: black;
-    padding-top: 2rem;
+    padding-top: 1rem;
 }
 
 #slr p {
-    font-size: 2rem;
     font-weight: 900;
     text-align: center;
     color: white;
@@ -381,6 +418,7 @@ a {
 }
 
 
+
 .btn {
     background-color: red;
     color: white;
@@ -392,14 +430,23 @@ a {
     margin: 20px auto;
     display: block;
     text-align: center;
-    font-size: 1.5em;
+
+
+    /* background-color: #ff0000;
+    color: #fff;
+    border: none;
+    padding: 10px 20px;
+    font-size: 16px;
+    border-radius: 5px;
+    cursor: pointer;
+    width: 80%;
+    margin: 0 auto; */
 }
 
 #scr p{
     text-align: center;
     color: red;
     font-weight: 900;
-    font-size: 1.5em;
 }
 
 
@@ -408,26 +455,22 @@ a {
 }
 
 #ph p:first-of-type {
-    font-size: 1.3rem;
     letter-spacing: .3px;
 }
 
 #ph p:nth-child(2) {
     font-weight: 900;
-    font-size: 1.8rem;
     letter-spacing: 1px;
 }
 
 #du {
     background-color: black;
-    padding: 2rem 0 2rem 2rem;
 }
 
 #du p:first-of-type{
     color: white;
     text-align: center;
     font-weight: 700;
-    font-size: 2rem;
     padding-top: 2rem;
 }
 
@@ -439,19 +482,16 @@ a {
 
 #du p  {
     color: white;
-    font-size: 1.2rem;
 }
 
 #ju p:first-of-type{
     color: red;
     text-align: center;
-    font-size: 1.5rem;
     font-weight: 900;
 }
 
 #ju p {
     text-align: center;
-    font-size: 1rem;
 }
 
 #sw {
@@ -463,7 +503,6 @@ a {
     padding-top: 2rem;
     text-align: center;
     font-weight: 900;
-    font-size: 1.5rem;
 }
 
 #sw img {
@@ -477,7 +516,6 @@ a {
     color: red;
     font-weight: 900;
     letter-spacing: 1px;
-    font-size: 1.5rem;
 }
 
 #wd p:nth-last-child(1) {
@@ -496,7 +534,6 @@ a {
 }
 
 #wi p {
-    font-size: 1.2em;
     color: black;
     font-weight: bold;
 }
@@ -524,7 +561,6 @@ a {
 #y, #w {
     text-align: center;
     font-weight: 900;
-    font-size: 1.4rem;
 }
 
 #dyw #sng p:last-child {
@@ -533,126 +569,26 @@ a {
 
 
 #bcg-35 {
-    padding: 2rem;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    border: 2px solid;
 }
 
 #bcg-35 p:first-child {
     text-align: center;
     font-weight: 900;
-    font-size: 1.5rem;
 }
 
 
-/* #cntr {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    justify-content: space-around;
-    flex-wrap: wrap;
-    max-width: 1200px;
-    width: 80%;
-    margin: auto;
-}
-
-.offer {
-    background-color: white;
-    padding: 20px;
-    margin: 10px;
-    text-align: center;
-    border: 1px solid #ddd;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-    width: 300px;
-}
-
-.offer h2 {
-    font-size: 1.5em;
-    margin: 10px 0;
-}
-
-.offer p {
-    font-size: 1em;
-    margin: 10px 0;
-}
-
-.offer img {
-    width: 200px;
-    height: auto;
-    margin: 10px 0;
-}
-
-.price h3 {
-    font-size: 1.5em;
-    color: black;
-}
-
-.old-price {
-    font-size: 0.9em;
-    color: gray;
-    text-decoration: line-through;
-}
-
-.delivery {
-    font-size: 1em;
-    color: black;
-    margin: 10px 0;
-}
-
-.delivery i {
-    color: red;
-    margin-right: 5px;
-}
-
-.select-order {
-    background-color: red;
-    color: white;
-    border: none;
-    padding: 10px 20px;
-    font-size: 1em;
-    cursor: pointer;
-}
-
-.select-order:hover {
-    background-color: darkred;
-}
-
-.bottles {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    gap: 10px;
-}
-
-.plus {
-    font-size: 2em;
-    color: red;
-    font-weight: bold;
-} */
-
-
-
-
-
-
-body {
-    font-family: Arial, sans-serif;
-    background-color: #f7f7f7;
-    margin: 0;
-    padding: 20px;
-}
-
-.product-container {
+#product-container {
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
     gap: 20px;
 }
 
-.product {
+#product {
     background-color: #fff;
     border: 1px solid #ddd;
     border-radius: 10px;
@@ -662,35 +598,35 @@ body {
     box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
 }
 
-.product img {
+#product img {
     max-width: 100%;
     height: auto;
     border-radius: 10px;
 }
 
-.price h3 {
+#price h3 {
     color: #000;
     font-size: 24px;
     margin: 10px 0;
 }
 
-.old-price {
+#old-price {
     color: #999;
     text-decoration: line-through;
     font-size: 14px;
 }
 
-.free-delivery {
+#free-delivery {
     color: #ff0000;
     font-weight: bold;
     margin: 10px 0;
 }
 
-.free-delivery i {
+#free-delivery i {
     margin-right: 5px;
 }
 
-button {
+#product button {
     background-color: #ff0000;
     color: #fff;
     border: none;
@@ -705,21 +641,6 @@ button {
 button:hover {
     background-color: #cc0000;
 }
-
-@media (max-width: 768px) {
-    
-}
-
-
-
-
-
-
-
-
-
-
-
 
 #hq {
     background-color: black;
@@ -742,20 +663,14 @@ button:hover {
 
 
 #wg p:first-of-type{
-    font-size: 2rem;
     font-weight: 900;
     padding-top: 2rem;
 }
 
 #wg p:last-child{
-    font-size: 2rem;
     font-weight: 900;
     padding-top: 1rem;
 }
-
-
-
-
 
 
 footer {
@@ -809,18 +724,12 @@ footer a:hover {
         padding-left: 10px;
     }
 
-    #tl {
-        flex-direction: column;
-        align-items: center;
-    }
+    
 
     #rd1 {
-        width: 80%;
-    }
-
-    #rd1 p {
-        font-size: .7rem;
-    }
+        
+       width: 100%;
+     }
 
     #bcg-1 {
         flex-direction: column;
@@ -833,8 +742,7 @@ footer a:hover {
     }
 
     .btn {
-        width: 100%;
-        font-size: .9em;
+        width: 70%;
     }
 
     #wi {
@@ -854,9 +762,8 @@ footer a:hover {
         font-weight: 400;
     }
 
-    .product {
+    #product {
         width: 100%;
-        margin: 10px 0;
     }
 
 
@@ -865,4 +772,48 @@ footer a:hover {
        
     }
 
+
+
+
+
+
+    body {
+        font-size: 14px; /* Slightly smaller font size for mobile devices */
+    }
+
+    h1 {
+        font-size: 1em;
+    }
+
+    h2 {
+        font-size: 1.1em;
+    }
+
+    h3 {
+        font-size: 1.4em;
+    }
+     
+    p {
+        font-size: 12px;
+    }
+
+
+    
+
+    #tl {
+        width: 100%;
+        
+    }
+
+    
+
+
+    
+     #tms {
+        flex-direction: column;
+        background-color: white;
+    }
+    
+
 }
+
