--- a/order-page/cs/style.css
+++ b/order-page/cs/style.css
@@ -1,11 +1,21 @@
 body {
     margin: 0;
     padding: 0;
-    font-family: Arial, sans-serif;
     display: flex;
     flex-direction: column;
     align-items: center;
     background-color: #f5f5f5;
+   
+    font-family: 'Roboto', sans-serif;
+    font-size: 16px; 
+    line-height: 1.6;
+    color: #333;
+
+}
+
+h1, h2 {
+    font-weight: 700;
+    color: #000; 
 }
 
 #lp {
@@ -38,7 +48,6 @@ h1, h2 {
 
 #bs li {
     margin: 10px 0;
-    font-size: 1.1rem;
 }
 
 #bs i {
@@ -75,12 +84,16 @@ footer a {
         padding: 10px;
     }
 
-    #bs li {
-        font-size: 1rem;
+    h1 {
+        font-size: 1em;
     }
 
-    h1, h2 {
-        font-size: .5;
+    h2 {
+        font-size: 1em;
+    }
+
+    p{
+        font-size: 5px;
     }
     
 }
