--- a/salespage/cs/style.css
+++ b/salespage/cs/style.css
@@ -40,21 +40,11 @@ a {
 
 #ae #e p:first-of-type{
     color: red;
-    text-align: center;
-    font-size: 20px;
+    /* text-align: center; */
+    /* font-size: 20px; */
     font-weight: bolder;
 }
 
-/* #ad p:nth-child(2) {
-    font-size: 1.5rem;
-    font-weight: 900;
-} */
-
-
-/* #e p{
-    font-size: 12px;
-    font-weight: 400;
-} */
 
 
 #rg {
@@ -109,13 +99,6 @@ a {
 }
 
 
-
-
-
-
-
-
-
 #ldp {
     width: 100%;
 }
@@ -137,24 +120,6 @@ a {
     /* font-size: 1em; */
     color: #ccc;
 }
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 
 
 #tms {
@@ -181,7 +146,7 @@ a {
 #tl img {
     border-radius: 50%;
     width: 100px;
-    height: 100px;
+    height: 310px;
     object-fit: cover;
     margin-bottom: 10px;
 }
@@ -422,7 +387,9 @@ a {
 .btn {
     background-color: red;
     color: white;
-    width: 20%;
+    width: 30%;
+    height: 60px;
+    font-size: 24px;
     padding: 10px;
     border: none;
     border-radius: 5px;
@@ -431,16 +398,6 @@ a {
     display: block;
     text-align: center;
 
-
-    /* background-color: #ff0000;
-    color: #fff;
-    border: none;
-    padding: 10px 20px;
-    font-size: 16px;
-    border-radius: 5px;
-    cursor: pointer;
-    width: 80%;
-    margin: 0 auto; */
 }
 
 #scr p{
@@ -635,6 +592,8 @@ a {
     border-radius: 5px;
     cursor: pointer;
     width: 80%;
+    height: 60px;
+    font-size: 24px;
     margin: 0 auto;
 }
 
@@ -794,24 +753,29 @@ footer a:hover {
     }
      
     p {
-        font-size: 12px;
+        font-size: 20px;
     }
-
-
-    
 
     #tl {
         width: 100%;
         
     }
 
-    
-
-
-    
      #tms {
         flex-direction: column;
         background-color: white;
+    }
+
+    .btn {
+        width: 250px;
+        height: 60px;
+        font-size: 24px;
+    }
+
+    #product button {
+        width: 250px;
+        height: 60px;
+        font-size: 24px;
     }
     
 
