--- a/salespage/cs/style.css
+++ b/salespage/cs/style.css
@@ -3,28 +3,28 @@
 
 body {
     font-family: 'Roboto', sans-serif;
-    font-size: 16px; /* Standard font size */
-    line-height: 1.6; /* Line height for better readability */
-    color: #333; /* Standard font color */
+    font-size: 16px; 
+    line-height: 1.4; 
+    color: #333; 
 }
 
 h1, h2, h3, h4, h5, h6 {
-    font-weight: 700; /* Bold font weight for headings */
-    /* color: #000; */
+    font-weight: 700; 
+}
+
+p {
+    font-size: 25px;
 }
 
 a {
     text-decoration: none;
 }
 
-#ae {
-    width: 100%;
-}
+
 
 #ad {
     background-color: black;
     color: white;
-    text-align: center;
     padding: 20px;
 }
 
@@ -32,16 +32,12 @@ a {
     background-color: white;
     color: red;
     padding: 10px;
-    display: inline-block;
     margin: 0 auto 20px;
-    font-size: 1.2rem;
-    font-weight: 700;
+    font-weight: 900;
 }
 
 #ae #e p:first-of-type{
     color: red;
-    /* text-align: center; */
-    /* font-size: 20px; */
     font-weight: bolder;
 }
 
@@ -77,20 +73,12 @@ a {
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    /* text-align: center; */
-    margin: 20px 0;
-    /* background-color: red; */
-    
+    margin: 20px 0;    
 }
 
 #ip p {
-    /* display: flex;
-    align-items: center;
-    justify-content: center; */
     margin: 10px 0;
     color: black;
-    /* font-size: 23px; */
-    padding: 2px 0 0 2px;
 }
 
 #ip p i {
@@ -110,23 +98,20 @@ a {
     text-align: center;
 }
 
+
 #h h1 {
     margin: 0;
-    /* font-size: 1.5em; */
 }
 
 #h p {
     font-style: italic;
-    /* font-size: 1em; */
     color: #ccc;
 }
 
 
 #tms {
     display: flex;
-    /* flex-wrap: wrap; */
     flex-direction: row;
-    
     justify-content: center;
     align-items: center;
     padding: 20px;
@@ -190,16 +175,6 @@ a {
     color: #00796b;
 }
 
-
-
-
-
-
-
-
-
-
-
 #dra {
     display: block;
   margin-left: auto;
@@ -215,7 +190,6 @@ a {
 
 #dra p {
     text-align: center;
-    /* text-align: justify; */
 }
 
 #dra img {
@@ -235,13 +209,11 @@ a {
 #rd p:first-of-type {
     text-align: center;
     color: red;
-    /* font-size: 2rem; */
 }
 
 #rd p {
     text-align: center;
     margin-top: 2rem;
-    font-size: 20px;
 }
 #rd1 {
    display: block;
@@ -265,7 +237,6 @@ a {
 #rd1 p {
     text-align: center;
     margin-top: 2rem;
-    text-align: justify;
 }
 
 #bcg {
@@ -281,16 +252,14 @@ a {
   padding-bottom: 2rem;
 }
 
-#bcg p:first-of-type {
+#bcg div h1 {
     color: red;
     text-align: center;
     font-weight: 900;
-    /* letter-spacing: 3; */
 }
 
 
 #bcg img {
-    /* width: 100%; */
     max-width: 300px;
     height: auto;
 }
@@ -298,8 +267,6 @@ a {
 #bcg h1, h2 {
     color: white;
     text-align: center;
-    /* letter-spacing: 3; */
-
 }
 
 #bcg p {
@@ -307,16 +274,12 @@ a {
     text-align: center;
 }
 
-
-
-
 #bcg-1 {
     font-family: Arial, sans-serif;
     display: flex;
     justify-content: center;
     align-items: center;
     margin: 0;
-    /* background-color: #f4f4f4; */
     padding: 2rem;
     margin: 3rem 0 3rem 0;
 }
@@ -422,13 +385,14 @@ a {
 
 #du {
     background-color: black;
+    padding: 3px;
 }
 
 #du p:first-of-type{
     color: white;
     text-align: center;
     font-weight: 700;
-    padding-top: 2rem;
+    /* padding-top: 2rem; */
 }
 
 #du img {
@@ -443,7 +407,7 @@ a {
 
 #ju p:first-of-type{
     color: red;
-    text-align: center;
+    /* text-align: center; */
     font-weight: 900;
 }
 
@@ -486,9 +450,7 @@ a {
   height: auto;
 }
 
-#wi {
-    padding: 20px;
-}
+
 
 #wi p {
     color: black;
@@ -496,13 +458,14 @@ a {
 }
 
 #wi i {
-    margin-right: 10px;
+    /* margin-right: 10px; */
     color: black;
+    text-align: justify;
 }
 
 #dyw {
     background-color: black;
-    padding: 2rem;
+    padding: 3px;
 }
 
 #dyw p {
@@ -519,6 +482,9 @@ a {
     text-align: center;
     font-weight: 900;
 }
+
+
+
 
 #dyw #sng p:last-child {
     font-style: italic;
@@ -543,6 +509,10 @@ a {
     flex-wrap: wrap;
     justify-content: center;
     gap: 20px;
+}
+
+#product-container p {
+    text-align: center;
 }
 
 #product {
@@ -637,7 +607,7 @@ footer {
     color: black;
     padding: 20px;
     text-align: center;
-    font-size: 10px;
+    font-size: 5px;
     margin-top: 50px;
 }
 
@@ -656,42 +626,143 @@ footer a:hover {
 }
 
 
-
-
-
-
-
-
-
-
-
 @media (max-width: 768px) {
+    body {
+        font-size: 14px; 
+    }
+
+    h1 {
+        font-size: 1.5em;
+    }
+
+    h2 {
+        font-size: 1.1em;
+    }
+
+    h3 {
+        font-size: 1.4em;
+    }
+    #bcg div {
+      width: 100%;
+      padding: 1px 3px 0 3px;
+    }
+
+    #w1 p:last-child{
+        text-align: justify;
+    }
+
+    #wi {
+        text-align: justify;
+    }
+     
+    p {
+        font-size: 20px;
+        text-align: justify;
+    }
+
+    #h  {
+        text-align: justify;
+    }
+
+    #ph p{
+        text-align: justify;
+    }
+
+    #h p{
+        text-align: justify
+    };
+
+    #ju p:first-of-type{
+        text-align: justify;
+    }
+
+    #hq {
+        margin-top: 0;
+        padding: 0 3px 0 3px;
+    }
+    
+    #ju p {
+        text-align: justify;
+    }
     #rg {
         max-width: 80%;
     }
+
+    #du p:first-of-type  {
+        text-align: justify;
+    }
+    #ad {
+        width: 89%;
+    }
+
+    #ad p:last-child {
+        text-align: center;
+    }
     
     #ad p:last-of-type {
-        max-width: 80%;
+        max-width: 100%;
+    }
+
+    #slr {
+        width: 100%;
+        padding: 1px 3px 0 3px;
     }
 
     #ae div img {
       width: 100%;
     }
-
-    #ip p {
-        justify-content: flex-start;
-        padding-left: 10px;
+    #ip p i {
+        margin-right: 2px;
+    }
+    
+    #dra p:first-of-type {
+        font-weight: 900;
+        text-align: justify;
     }
 
+    #dra p {
+        text-align: justify;
+    }
+    
+    
+    #rd p {
+        text-align: justify;
+    }
+
+    #rd p:first-of-type {
+        text-align: justify;
+    }
     
 
     #rd1 {
-        
        width: 100%;
      }
 
+      
+      #rd1 img { 
+          width: 100%;
+          max-width: 400px;
+          height: auto;
+      }
+      
+      #rd1 p {
+          margin-top: 2rem;
+          text-align: justify;
+      }
+      #bcg p{
+        text-align: justify;
+      }
+
     #bcg-1 {
         flex-direction: column;
+    }
+
+    #wg p:first-of-type, p:last-child{
+        text-align: center;
+    }
+
+    #slr p {
+        text-align: justify;
     }
 
     .card {
@@ -707,14 +778,11 @@ footer a:hover {
     #wi {
         display: flex;
         flex-direction: column;
-        justify-content: center;
-        align-items: center;
     }
 
     #wi p {
-        font-size: .9em;
         color: black;
-        font-weight: 100;
+        font-weight: 900;
     }
 
     #bid h1{
@@ -725,40 +793,22 @@ footer a:hover {
         width: 100%;
     }
 
+    #bid {
+        padding-bottom: 0;
+    }
 
     footer p{
         font-size: 6px;
        
     }
 
-
-
-
-
-
-    body {
-        font-size: 14px; /* Slightly smaller font size for mobile devices */
-    }
-
-    h1 {
-        font-size: 1em;
-    }
-
-    h2 {
-        font-size: 1.1em;
-    }
-
-    h3 {
-        font-size: 1.4em;
-    }
-     
-    p {
-        font-size: 20px;
-    }
-
     #tl {
         width: 100%;
         
+    }
+
+    #tl p {
+        text-align: center;
     }
 
      #tms {
@@ -782,6 +832,15 @@ footer a:hover {
         width: 100px;
         height: 310px;
     }
+
+    #y P:first-of-type {
+        text-align: center;
+    }
+
+    #w p:first-of-type {
+        text-align: center;
+    }
+    
     
 
 }
