--- a/cs/style.css
+++ b/cs/style.css
@@ -12,19 +12,19 @@ body {
   background-origin: red;
 
   font-family: 'Roboto', sans-serif;
-  font-size: 16px; /* Standard font size */
-  line-height: 1.6; /* Line height for better readability */
-  color: #333; /* Standard font color */
+  font-size: 16px; 
+  line-height: 1.6;
+  color: #333; 
 }
 
 h1, h2, h3, h4, h5, h6 {
-    font-weight: 700; /* Bold font weight for headings */
-    color: #000; /* Black color for headings */
+    font-weight: 700;
+    color: #000;
 }
 
 p, a, button {
-    font-weight: 400; /* Regular font weight for paragraphs, links, and buttons */
-    font-size: 16px; /* Standard font size */
+    font-weight: 400; 
+    font-size: 16px; 
 }
 
 #section {
@@ -50,11 +50,9 @@ hr {
 }
 
 #cn img {
-
   width: 100%;
   max-width: 400px;
   height: auto;
-  
 }
 
 #si {
@@ -74,7 +72,6 @@ hr {
 #si .fa-twitter { color: #1da1f2; }
 #si .fa-linkedin { color: #0077b5; }
 
-
 .bk {
   margin: 2rem 0 0 2rem;
   display: flex;
@@ -90,7 +87,6 @@ hr {
    border: none;
   
 }
-
 
 .cl {
   background-color: #90EE90;
@@ -141,11 +137,6 @@ hr {
   font-style: italic;
   color: #999;
 }
-
-
-
-
-
 
 #bf {
   display: flex;
@@ -224,10 +215,7 @@ hr {
   font-weight: bold;
   border-radius: 5px;
   cursor: pointer;
-  /* width: 500px;
-  height:70px; */
   transition: transform 0.3s ease, background-color 0.3s ease;
-  /* animation: rotate 2s infinite; */
 }
 
 #cd button:hover {
@@ -307,17 +295,6 @@ h3 {
 }
 
 }
-
-
-
-  
-
-
-
-
-
-
-
 
 @media (min-width: 1024px) {
   #section {
