--- a/upsell/cs/style.css
+++ b/upsell/cs/style.css
@@ -1,10 +1,15 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap');
 
 body {
-    margin: 0;
-    padding: 0;
-    font-family: Arial, sans-serif;
-    background-color: #f4f4f4;
+  margin: 0;
+  background-color: white;
+  min-height: 100vh;
+  padding:0 2px;
+  background-origin: red;
+
+  font-family: 'Roboto', sans-serif;
+  line-height: 1.6;
+  color: #333; 
   }
 
 h1, h2, h3, h4, h5, h6 {
@@ -26,7 +31,7 @@ button {
 }
 
   #app {
-    padding: 0 15px;
+    /* padding: 0 15px; */
   }
 
   .section-1 {
@@ -119,6 +124,28 @@ button {
     background-color: rgb(142, 142, 203);
   }
 
+  #bt {
+    display: flex;
+    justify-content: center;
+    margin: 20px 0;
+  }
+
+  #bt button {
+      width: 100%; 
+      padding: 10px;
+      background-color: rgb(19,114,211);
+      color: white;
+      font-style: italic;
+      border: none;
+      cursor: pointer;
+      font-size: 1.5rem;
+      border-radius: 5px
+  }
+
+  #bt button:hover {
+    background-color: rgb(142, 142, 203);
+  }
+
   .orp {
     color: black;
     font-size: 1rem;
@@ -172,36 +199,45 @@ button {
   }
 
 
-
-
-
-
-
   @media (min-width: 320px) {
     .section-1 h1 {
       font-size: 3.5rem;
+      text-align: justify;
     }
-    
     
     #btn button {
             width: 100%;
             padding: 10px; 
+            margin: 0;
       }
-
+     
       body {
-        font-size: 14px; 
+        font-size: 20px; 
+    }
+
+    h1 i {
+      text-align: justify;
     }
 
     h1 {
         font-size: 1.2em;
+        text-align: justify;
     }
 
     h2 {
         font-size: 1.2em;
+        text-align: justify;
+      padding: 2px;
     }
 
     h3 {
         font-size: 1.4em;
+        text-align: justify;
+    }
+
+    #bcgp p {
+      text-align: justify;
+      font-size: 20px;
     }
       
       
